@@ -7,6 +7,7 @@
 // Copyright (C) Cyrille COLIN, 2005
 //
 
+
 using System;
 using System.Security.Cryptography;
 namespace System.Net.Radius {
@@ -33,44 +34,43 @@ class Utils {
 		md5.ComputeHash(sum);
         return md5.Hash;
     }
-    static public byte[] encodePapPassword(byte[] userPass,byte[] requestAuthenticator,string sharedSecret) {
+    static public byte[] encodePapPassword(byte[] userPassBytes,byte[] requestAuthenticator,string sharedSecret) {
 		
-		System.Security.Cryptography.MD5 md5 = new System.Security.Cryptography.MD5CryptoServiceProvider();
-
-        byte[] userPassBytes = null;
-        if (userPass.Length > 128) {
-            userPassBytes = new byte[128];
-            System.Array.Copy(userPass,0,userPassBytes,0,128);
-        } else {
-            userPassBytes = userPass;
-        }
+        if (userPassBytes.Length > 128)
+            throw new InvalidOperationException("the PAP password cannot be greater than 128 bytes...");
+        
         byte[] encryptedPass = null;
-
-        if (userPassBytes.Length < 128) {
-            if (userPassBytes.Length % 16 == 0) {
-                encryptedPass = new byte[userPassBytes.Length];
-            } else {
-                encryptedPass = new byte[((userPassBytes.Length / 16) * 16) + 16];
-            }
+        if (userPassBytes.Length % 16 == 0) {
+            encryptedPass = new byte[userPassBytes.Length];
         } else {
-            encryptedPass = new byte[128];
+            encryptedPass = new byte[((userPassBytes.Length / 16) * 16) + 16];
         }
         System.Array.Copy(userPassBytes, 0, encryptedPass, 0, userPassBytes.Length);
         for(int i = userPassBytes.Length; i < encryptedPass.Length; i++) {
             encryptedPass[i] = 0; 
         }
-		byte[] ssArray = System.Text.Encoding.ASCII.GetBytes(sharedSecret);
-		byte[] sum = new byte[requestAuthenticator.Length + ssArray.Length];
-		Array.Copy(ssArray,0,sum,0,ssArray.Length);
-		Array.Copy(requestAuthenticator,0,sum,ssArray.Length,requestAuthenticator.Length);
-        md5.ComputeHash(sum);
-        byte[] bn = md5.Hash;
 
-        for (int i = 0; i < 16; i++){
-            encryptedPass[i] = (byte)(bn[i] ^ encryptedPass[i]);
+		byte[] sharedSecretBytes = System.Text.Encoding.ASCII.GetBytes(sharedSecret);
+
+		System.Security.Cryptography.MD5 md5;
+        for (int chunk = 0; chunk < (encryptedPass.Length / 16); chunk++)
+        {
+            md5 = new System.Security.Cryptography.MD5CryptoServiceProvider();
+            md5.TransformBlock(sharedSecretBytes, 0, sharedSecretBytes.Length, sharedSecretBytes, 0);
+            if (chunk == 0)
+                md5.TransformFinalBlock(requestAuthenticator, 0, requestAuthenticator.Length);
+            else
+                md5.TransformFinalBlock(encryptedPass, (chunk - 1) * 16, 16);
+            
+            byte[] hash = md5.Hash;
+
+            for (int i = 0; i < 16; i++){
+                int j = i + chunk*16;
+                encryptedPass[j] = (byte) (hash[i] ^ encryptedPass[j]);
+            }
+
         }
-		//[TODO] encryptedPass.Length > 16
-        
+
 		return encryptedPass;
     }
 }
